--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 *{
     margin: 0;
-    overflow: hidden;
+    overflow-x: hidden;
     padding: 0;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
