--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,8 @@
     margin: 0;
     overflow-x: hidden;
     padding: 0;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    box-sizing: border-box;
 }
 
 body{
@@ -17,7 +18,17 @@ body{
 }
 
 .nav-item{
+    top: 0;
     font-weight: 800;
+    margin-right: 40px;
+    padding: 10px;
+}
+
+li{
+    
+}
+.nav-item > h2{
+    width: 100%;
 }
 
 ul{
@@ -54,6 +65,8 @@ main{
     max-width: 600px;
     margin: 0 auto 0 auto;
     margin-top: 50px;
+    padding: 0 10px 0 10px;
+ 
 }
 
 .contactButton{
@@ -68,7 +81,7 @@ main{
   font-size: 16px;
   font-weight: 700;
   line-height: 1.5;
-  margin: 0;
+  margin: 10px 0 0 0;
   max-width: none;
   min-height: 44px;
   min-width: 10px;
@@ -82,6 +95,10 @@ main{
   -webkit-user-select: none;
   touch-action: manipulation;
   width: 100%;
+}
+
+.contactButton:hover{
+    transform: scale(1.1)
 }
 
 
