--- a/styles.css
+++ b/styles.css
@@ -50,11 +50,14 @@ main{
 }
 
 .companyName h2{
+    margin-bottom: 20px;
     font-size: 40px;
     font-weight: 800;
 }
 
 .contact-container h2{
+    margin-top: -15px;
+    margin-bottom: 20px;
     font-size: 40px;
     font-weight: 800;
 }
@@ -81,7 +84,7 @@ main{
   font-size: 16px;
   font-weight: 700;
   line-height: 1.5;
-  margin: 10px 0 0 0;
+  margin: 25px 0 25px 0;
   max-width: none;
   min-height: 44px;
   min-width: 10px;
@@ -106,6 +109,7 @@ main{
     font-size: 18px;
     font-weight: 450;
 }
+
 a{
     text-decoration: none;
     color: inherit;
@@ -120,7 +124,7 @@ a{
 
 
 .img-container{
-    margin-top: 50px;
+    margin-top: 30px;
     display: flex;
     position: relative;
     width: 2400px;
@@ -153,4 +157,3 @@ a{
         transform: translateX(-19.5%);
     }
 }
-
