Updating my css because it didn't wanna commit

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body{
     background-color: #DDD0C8;
     min-height: 100vh;
 }
+/* CSS is no fun sometimes, but still love it */
 
 .spacer{
     height: 2px;
