--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,7 @@ main{
   -webkit-user-select: none;
   touch-action: manipulation;
   width: 300px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .contactButton:hover{
